refactor(basic-2.5): add line wrapping on long lines

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="centered-main-page-element">
       <p id="topSectionForAddingElementToList">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper"><input id="new-task" class="task" type="text">
+        <div class="task-row-wrapper">
+          <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
       </p>
@@ -30,7 +31,11 @@
         <li class="editMode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
-          <input type="text" value="go-shopping" class="task">
+          <input 
+            type="text" 
+            value="go-shopping" 
+            class="task"
+          >
           <button class="edit">Save</button>
           <button class="delete">
             <img src="./remove.svg">
