--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="header">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="main">
+      <p id="new-task-section">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task" class="task" type="text">
@@ -18,7 +18,7 @@
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id='incompleteTasks'>
+      <ul id='incomplete-tasks'>
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
