--- a/index.html
+++ b/index.html
@@ -4,52 +4,52 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="page">
     <div class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="header-image" src="./eisenhower-matrix.jpg">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main">
       <p id="new-task-section">
-        <label for="new-task">Add Item</label>
+        <label class="new-task-label" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task" class="task" type="text">
-          <button>Add</button>
+          <button class="button">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id='incomplete-tasks'>
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+      <h3 class="heading-3">Todo</h3>
+      <ul id="incomplete-tasks">
+        <li class="task-item">
+          <input type="checkbox" class="check-input">
+          <label class="task-label">Pay Bills</label>
+          <input type="text" class="task-input">
+          <button class="button edit">Edit</button>
+          <button class="button delete">
             <img src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
+        <li class="task-item edit-mode">
+          <input type="checkbox" class="check-input">
+          <label class="task-label">Go Shopping</label>
           <input 
             type="text" 
             value="go-shopping" 
-            class="task"
+            class="task-input"
           >
-          <button class="edit">Save</button>
-          <button class="delete">
+          <button class="button edit">Save</button>
+          <button class="button delete">
             <img src="./remove.svg">
           </button>
         </li>
       </ul>
       <h3>Completed</h3>
       <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
+        <li class="task-item">
+          <input type="checkbox" class="check-input" checked>
           <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <input type="text" class="task-input">
+          <button class="button edit">Edit</button>
+          <button class="button delete">
             <img src="./remove.svg">
           </button>
         </li>
