--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="header">
+    <header class="header">
       <img class="header-image" src="./eisenhower-matrix.jpg">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main">
-      <p id="new-task-section">
+    </header>
+    <main class="main">
+      <section id="new-task-section">
         <label class="new-task-label" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task" class="task" type="text">
           <button class="button">Add</button>
         </div>
-      </p>
+      </section>
       <h3 class="heading-3">Todo</h3>
       <ul id="incomplete-tasks">
         <li class="task-item">
@@ -54,7 +54,7 @@
           </button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
