--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <img class="header-image" src="./eisenhower-matrix.jpg">
+      <img class="header-image" alt="eisenhower matrix" src="./eisenhower-matrix.jpg">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -25,7 +25,7 @@
           <input type="text" class="task-input">
           <button class="button edit">Edit</button>
           <button class="button delete">
-            <img src="./remove.svg">
+            <img alt="" src="./remove.svg">
           </button>
         </li>
         <li class="task-item edit-mode">
@@ -38,7 +38,7 @@
           >
           <button class="button edit">Save</button>
           <button class="button delete">
-            <img src="./remove.svg">
+            <img alt="" src="./remove.svg">
           </button>
         </li>
       </ul>
@@ -50,7 +50,7 @@
           <input type="text" class="task-input">
           <button class="button edit">Edit</button>
           <button class="button delete">
-            <img src="./remove.svg">
+            <img alt="" src="./remove.svg">
           </button>
         </li>
       </ul>
