fix: change div to section to comply with semantic rules

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       </div>
     </header>
     <main class="main">
-      <div id="task-form">
+      <section id="task-form">
         <label class="task-form__label" for="new-task">Add Item</label>
         <div class="task-form__input task-row-wrapper">
           <input id="new-task" class="task" type="text">
           <button class="button">Add</button>
         </div>
-      </div>
+      </section>
       <h3 class="heading-3">Todo</h3>
       <ul class="tasks" id="incomplete-tasks">
         <li class="task-item">
